Refactored tweet -> status

--- a/src/main/webapp/assets/css/bootstrap/2.0.2/bootstrap.css
+++ b/src/main/webapp/assets/css/bootstrap/2.0.2/bootstrap.css
@@ -1749,7 +1749,7 @@ table .span24 {
 .icon-chevron-down {
   background-position: -313px -119px;
 }
-.icon-retweet {
+.icon-restatus {
   background-position: -336px -120px;
 }
 .icon-shopping-cart {
