--- a/src/main/webapp/assets/css/tatami-custom-mobile.less
+++ b/src/main/webapp/assets/css/tatami-custom-mobile.less
@@ -171,14 +171,14 @@ body {
 		}
 	}
 	
-	#homePanelTweet
+	#homePanelStatus
 	{
 		padding-top: 2% !important;
 		padding-bottom: 2% !important;
 		padding-left: 0px !important;
 		padding-right: 0px !important;
 		
-		#tweetContent
+		#statusContent
 		{
 			width: 95%;
 			height: 100%; 
@@ -193,7 +193,7 @@ body {
 				font-size: 2.5em !important;	
 			}
 		}
-		#tweetButton
+		#statusButton
 		{
 			width: 100%;
 			height: 50px;			
@@ -205,7 +205,7 @@ body {
 				height: 100px;	
 			}
 		}
-		#tweetErrorPanel
+		#statusErrorPanel
 		{
 			font-size: 1.4em !important;
 			padding-bottom: 1% !important;		
@@ -375,12 +375,12 @@ body {
 	.data
 	{
 
-		.tweetGravatarColumn
+		.statusGravatarColumn
 		{
 			width: 10%;	
 		}
 		
-		.tweetAuthor
+		.statusAuthor
 		{
 			@media screen and (min-width: 25em)
 			{
@@ -388,7 +388,7 @@ body {
 				line-height: 30px !important;
 			}
 		}
-		.tweetText
+		.statusText
 		{
 			@media screen and (min-width: 25em)
 			{
@@ -396,7 +396,7 @@ body {
 				line-height: 30px !important;
 			}
 		}				
-		.tweetFriend
+		.statusFriend
 		{
 			width: 20%;
 			@media screen and (min-width: 25em)
@@ -405,7 +405,7 @@ body {
 			}
 			.iconCell;
 		}
-		.tweetDate
+		.statusDate
 		{
 			width: 5%;
 			@media screen and (min-width: 25em)
@@ -417,7 +417,7 @@ body {
 		}				
 	}
 }
-.tweetPagingButton
+.statusPagingButton
 {
 	width: 1O0% !important;
 	@media screen and (min-width: 25em)
@@ -618,7 +618,7 @@ body {
 			.middle;
 		}	
 	}	
-	.tweetFriend
+	.statusFriend
 	{
 		.center;
 		.middle;
