--- a/src/main/webapp/assets/fragments/standard/favline.html
+++ b/src/main/webapp/assets/fragments/standard/favline.html
@@ -2,12 +2,11 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th colspan="3"><h2>Favorite tweets list</h2></th>
             <th>
-                <a href="#" onclick="favoriteTweets()" title="Refresh"><i class="icon-repeat icon-white"></i></a>
+                <a href="#" onclick="favoriteStatuses()" title="Refresh"><i class="icon-repeat icon-white"></i></a>
             </th>
         </tr>
         </thead>
-        <tbody id="favTweetsList" class="tweetsList"></tbody>
+        <tbody id="favStatusList" class="statusList"></tbody>
     </table>
 </section>
