--- a/src/main/webapp/assets/fragments/standard/punchchart.html
+++ b/src/main/webapp/assets/fragments/standard/punchchart.html
@@ -1,5 +1,5 @@
 <section id="week_statistics">
-    <h2>Tweet of the week</h2>
+    <h2>Status of the week</h2>
 
     <div id="punchchart_div" style="width: 800px; height: 300px;"></div>
 </section>
