--- a/src/main/webapp/assets/fragments/standard/tagline.html
+++ b/src/main/webapp/assets/fragments/standard/tagline.html
@@ -2,12 +2,11 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th colspan="3"><h2>Tag tweets list</h2></th>
             <th>
-                <a href="#" onclick="listTagTweets(null)" title="See the trend"><i class="icon-tags icon-white"></i></a>
+                <a href="#" onclick="listTagStatus(null)" title="See the trend"><i class="icon-tags icon-white"></i></a>
             </th>
         </tr>
         </thead>
-        <tbody id="tagTweetsList" class="tweetsList"></tbody>
+        <tbody id="tagStatusList" class="statusList"></tbody>
     </table>
 </section>
