--- a/src/main/webapp/assets/fragments/mobile/favline.html
+++ b/src/main/webapp/assets/fragments/mobile/favline.html
@@ -5,7 +5,7 @@
 	<table class="table table-striped lineHeaderTable">
 		<thead>
 			<tr>
-				<td colspan="3" class="center"><h3>Favorite tweets list</h3></td>
+				<td colspan="3" class="center"><h3>Favorite status list</h3></td>
 				<td class="refreshCell">
 					<a class="refreshLineIcon" href="#" title="Refresh - shortcut : ctrl+R">
 						<i class="frame icon-refresh"></i>
@@ -15,16 +15,16 @@
 		</thead>
 	</table>
 
-	<div class="row-fluid tweetContainer">
+	<div class="row-fluid statusContainer">
 		<table class="table table-striped">
-			<tbody id="favTweetsList" class="lineContent"></tbody>		
+			<tbody id="favStatusList" class="lineContent"></tbody>
 		</table>
 	</div>
 	
 	<footer class="row-fluid" data-rest-url="/tatami/rest/favorites?__START__/__END__"
 		data-line-type="favoriteline">
 		<div class="span9 fullHeight middle">
-			<button class="tweetPagingButton row-fluid btn btn-primary" type="button">Click to get more ...</button>
+			<button class="statusPagingButton row-fluid btn btn-primary" type="button">Click to get more ...</button>
 		</div>
 		<div class="span3 right">
 			<em>#</em>&nbsp;
