--- a/src/main/webapp/assets/fragments/standard/piechart.html
+++ b/src/main/webapp/assets/fragments/standard/piechart.html
@@ -1,5 +1,5 @@
 <section id="day_statistics">
-    <h2>Tweets of the day</h2>
+    <h2>Status of the day</h2>
 
     <div id="piechart_div" style="width: 640px; height: 400px;"></div>
 </section>
