--- a/src/main/webapp/assets/fragments/standard/searchline.html
+++ b/src/main/webapp/assets/fragments/standard/searchline.html
@@ -2,12 +2,11 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th colspan="3"><h2>Search tweets list</h2></th>
             <th>
-                <a href="#" onclick="searchTweets(null)" title="Clear search results"><i class="icon-search icon-white"></i></a>
+                <a href="#" onclick="searchStatus(null)" title="Clear search results"><i class="icon-search icon-white"></i></a>
             </th>
         </tr>
         </thead>
-        <tbody id="searchTweetsList" class="tweetsList"></tbody>
+        <tbody id="searchStatusList" class="statusList"></tbody>
     </table>
 </section>
