--- a/src/main/webapp/WEB-INF/layouts/tiles.xml
+++ b/src/main/webapp/WEB-INF/layouts/tiles.xml
@@ -12,6 +12,8 @@
     <definition name="profile" templateExpression="/WEB-INF/layouts/${currentDevice.normal ? 'standard' : 'mobile'}/profile.jsp">
     </definition>
 
+    <definition name="status" templateExpression="/WEB-INF/layouts/standard/status.jsp"/>
+
     <definition name="about" templateExpression="/WEB-INF/layouts/standard/about.jsp"/>
     <definition name="404-error" templateExpression="/WEB-INF/layouts/standard/404-error.jsp"/>
     <definition name="500-error" templateExpression="/WEB-INF/layouts/standard/500-error.jsp"/>
