Temporary version : first multi enterprise refactorings

--- a/src/main/webapp/assets/fragments/standard/followUser.html
+++ b/src/main/webapp/assets/fragments/standard/followUser.html
@@ -5,7 +5,7 @@
         <form id="followUserForm" class="form-search" onsubmit="return followUserHome(($('#followUserInput').val()))"
               htmlEscape="true">
             <input id="followUserInput" type="text" class="input-large search-query"
-                   placeholder="Type the login to follow..." required="required"/>
+                   placeholder="Type the user name to follow..." required="required"/>
             <ul id="usersSuggestions"></ul>
 
             <button type="submit" class="btn btn-primary">Follow</button>
