--- a/src/main/webapp/assets/fragments/mobile/profile.html
+++ b/src/main/webapp/assets/fragments/mobile/profile.html
@@ -10,13 +10,13 @@
     </div>
     <div class="well well-small row-fluid">
         <div class="span4">
-            <span id="statusCount" class="badge"></span><br/>TWEETS
+            <span id="statusCount" class="badge"></span><br/>Status
         </div>
         <div class="span4">
-            <span id="friendsCount" class="badge"></span><br/>FOLLOWING
+            <span id="friendsCount" class="badge"></span><br/>Followed
         </div>
         <div class="span4">
-            <span id="followersCount" class="badge"></span><br/>FOLLOWERS
+            <span id="followersCount" class="badge"></span><br/>Followers
         </div>
     </div>
     <div class="row-fluid">
