--- a/src/main/webapp/WEB-INF/layouts/tiles.xml
+++ b/src/main/webapp/WEB-INF/layouts/tiles.xml
@@ -13,7 +13,9 @@
     </definition>
 
     <definition name="status" templateExpression="/WEB-INF/layouts/standard/status.jsp"/>
-
+    <definition name="account" templateExpression="/WEB-INF/layouts/standard/account.jsp"/>
+    <definition name="account/password" templateExpression="/WEB-INF/layouts/standard/account_password.jsp"/>
+    <definition name="account/enterprise" templateExpression="/WEB-INF/layouts/standard/account_enterprise.jsp"/>
     <definition name="about" templateExpression="/WEB-INF/layouts/standard/about.jsp"/>
     <definition name="404-error" templateExpression="/WEB-INF/layouts/standard/404-error.jsp"/>
     <definition name="500-error" templateExpression="/WEB-INF/layouts/standard/500-error.jsp"/>
