--- a/src/main/webapp/WEB-INF/layouts/tiles.xml
+++ b/src/main/webapp/WEB-INF/layouts/tiles.xml
@@ -3,13 +3,14 @@
 
 <tiles-definitions>
 
-    <definition name="home" templateExpression="/WEB-INF/layouts/${currentDevice.normal ? 'standard' : 'mobile'}/home.jsp">
+    <definition name="home" templateExpression="/WEB-INF/layouts/standard/home.jsp">
+        <!-- /${currentDevice.normal ? 'standard' : 'mobile'}/ -->
     </definition>
 
-    <definition name="login" templateExpression="/WEB-INF/layouts/${currentDevice.normal ? 'standard' : 'mobile'}/login.jsp">
+    <definition name="login" templateExpression="/WEB-INF/layouts/standard/login.jsp">
     </definition>
     
-    <definition name="profile" templateExpression="/WEB-INF/layouts/${currentDevice.normal ? 'standard' : 'mobile'}/profile.jsp">
+    <definition name="profile" templateExpression="/WEB-INF/layouts/standard/profile.jsp">
     </definition>
 
     <definition name="status" templateExpression="/WEB-INF/layouts/standard/status.jsp"/>
