--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -154,3 +154,9 @@
 .status-content a {
   font-weight: bold;
 }
+
+.favorite {
+  background-image: url(../img/favorite.png);
+  background-repeat: no-repeat;
+  background-position: right top;
+}
