--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -96,6 +96,10 @@ form {
   padding-right: 10px;
 }
 
+.status-actions a:hover {
+  cursor: pointer;
+}
+
 #footer {
     text-align: center;
     padding-top: 5px;
