'Shared by' view

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -71,10 +71,9 @@ form {
   color: #3a5fad;
 }
 
-.statuses table {
+.statuses table, .shares table {
     width: 100%;
 }
-
 .userStatus {
     color: #000000;
     text-decoration: none;
@@ -108,6 +107,8 @@ form {
 .avatar-small {
     width: 32px;
     height: 32px;
+    margin-right: 2px;
+    margin-bottom: 2px;
 }
 
 .status-actions {
@@ -137,13 +138,6 @@ form {
 
 .status {
   margin-bottom: 5px;
-}
-
-.status th:first-child {
-  vertical-align: top;
-  width: 64px;
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 .status th:first-child {
