--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -62,6 +62,13 @@ form {
   padding-right: 14px;
 }
 
+.counter{
+    font-size:80%;
+    font-style: italic;
+}
+.counter_warning{color: #ff7f00;}
+.counter_exceeded{color: #ee0014;}
+
 .alert-discuss {
   color: #3a5fad;
   background-color: #d9e0f7;
