1st version with JQuery timeago (does not work completely)

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -138,6 +138,11 @@ form {
   margin-bottom: 0px;
 }
 
+.timeago {
+  color: #808080;
+  font-size: 90%;
+}
+
 .favorite {
   background-image: url(/img/favorite.png);
   background-repeat: no-repeat;
