--- a/src/main/webapp/css/themes/journal.css
+++ b/src/main/webapp/css/themes/journal.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=News+Cycle:400,700');
+#mainPanel {
+    padding-top: 20px
+}
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block;}
 audio,canvas,video{display:inline-block;*display:inline;*zoom:1;}
 audio:not([controls]){display:none;}
