--- a/src/main/webapp/css/themes/superhero.css
+++ b/src/main/webapp/css/themes/superhero.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald);
 @import url(https://fonts.googleapis.com/css?family=Noticia+Text);
+#mainPanel {
+    padding-top: 20px
+}
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block;}
 audio,canvas,video{display:inline-block;*display:inline;*zoom:1;}
 audio:not([controls]){display:none;}
