wrap long urls in messages on multiple lines on IE and Chrome

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -137,6 +137,11 @@ form {
   cursor: pointer;
 }
 
+.status-content p {
+	word-break: break-all;
+	word-wrap: break-word;
+}
+
 .status-content a {
   font-weight: bold;
 }
