--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -1,4 +1,3 @@
-
 .homeMenu{margin-left:0;margin-bottom:0.3em;list-style:none;}
 
 /*
@@ -138,8 +137,8 @@ form {
 }
 
 .status-content p {
-	word-break: break-all;
-	word-wrap: break-word;
+  word-break: break-word;
+  word-wrap: break-word;
 }
 
 .status-content a {
