--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -1,4 +1,3 @@
-
 .homeMenu{margin-left:0;margin-bottom:0.3em;list-style:none;}
 
 /*
@@ -243,4 +242,8 @@ form {
  
 /* Large desktop */
 @media (min-width: 1200px) {
+}
+
+table {
+  table-layout: fixed;
 }
