--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -17,7 +17,8 @@
 */
 
 .profile-infos {
-  text-align: center
+  text-align: center;
+  margin-bottom: 0px
 }
 
 .profile-infos td, .profile-infos th {
