"who is online" should be working

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -34,11 +34,11 @@ body {
   Profile Stats table tablet
 */
 
-#profileContent .well, #profileFollow .well, #profileTrends .well, #userTrends .well {
+#profileContent .well, #profileOnlineUsers .well, #profileFollow .well, #profileTrends .well, #userTrends .well {
   padding: 0px;
 }
 
-#profileContent table, #profileFollow table, #profileTrends table, #userTrends table {
+#profileContent table, #profileOnlineUsers .table, #profileFollow table, #profileTrends table, #userTrends table {
   margin: 0px;
 }
 
