--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -182,6 +182,10 @@ form {
   word-wrap: break-word;
 }
 
+.status-content pre {
+  word-break: break-word;
+}
+
 .status-content a {
   font-weight: bold;
 }
