--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -293,3 +293,11 @@ form {
 table {
   table-layout: fixed;
 }
+
+.nav-collapse .dropdown-menu {
+  display: none;
+}
+
+.nav-collapse .open .dropdown-menu {
+  display: block;
+}
