Fix dropdown submenu

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -294,10 +294,10 @@ table {
   table-layout: fixed;
 }
 
-.nav-collapse .dropdown-menu {
+.nav-collapse .dropdown-menu.closed {
   display: none;
 }
 
-.nav-collapse .open .dropdown-menu {
+.nav-collapse .open .dropdown-menu.closed {
   display: block;
 }
