--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -62,6 +62,14 @@ form {
     height: 20px;
 }
 
+#updateStatusBtn {
+   display: none;
+}
+
+#contentGroup {
+    display: none;
+}
+
 .counter{
     font-size:80%;
     font-style: italic;
