--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -2,7 +2,7 @@
 
 body {
     //background-color: #e9e9e9;
-    background-image:url(/img/bgd.jpg);
+    background-image:url(/img/wallpaper.jpg);
 }
 
 /*
