1st version of private messages

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -71,6 +71,10 @@ form {
     display: none;
 }
 
+#updateStatusPrivate {
+    display: none;
+}
+
 .counter{
     font-size:80%;
     font-style: italic;
