--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -369,9 +369,10 @@ table {
 }
 
 .hasCategory .item{
-    height: 30px;
+    height: 33px;
     margin-left: 40px;
     background: #FFFFFF;
+    cursor: pointer;
 }
 
 .hasCategory .category{
@@ -396,4 +397,48 @@ table {
 
 .hasCategory li:first-child{
     border-top: none;
+}
+
+.hasCategory li.item img{
+    display: block;
+    float: left;
+    margin: 0 8px 0 3px;
+}
+
+.hasCategory li.item h4{
+    font-size: 12px;
+    margin: 0 1px 0 0;
+}
+
+.hasCategory li.item h4 a{
+    color:#000;
+}
+
+.hasCategory li.item p{
+    font-size: 11px;
+    margin: 0;
+    overflow: hidden;
+    height: auto;
+    line-height: 11px;
+}
+.hasCategory li.item.users{
+    padding: 3px 0 4px 0;
+}
+
+.hasCategory li.item.active,
+.hasCategory li.item:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #0081c2;
+    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+    background-repeat: repeat-x;
+    outline: 0;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+}
+.hasCategory li.item a:hover{
+    text-decoration: none;
 }
